<resources>
    <string name="app_name">CITY PARKING</string>
    <string name="add_todo">Add Parking</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account"><u>Create New Account</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Enter Contact Number</string>
    <string name="car_plate">Enter Car Plate Number</string>
    <string name="update_name">Update Name</string>
    <string name="update_email">Update Email Address</string>
    <string name="update_contact_number">Update Contact Number</string>
    <string name="update_car_plate">Update Car Plate Number</string>
    <string name="update_profile">Update User Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>