<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        android:text="UPDATE USER PROFILE"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtUpdateName"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/updateTitle"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="70dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/update_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUpdateEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/update_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateName"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />



    <EditText
        android:id="@+id/edtUpdateContactNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/update_contact_number"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />
    <EditText
        android:id="@+id/edtUpdateCarPlateNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/update_car_plate"
        android:inputType="textNoSuggestions"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateContactNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <EditText
        android:id="@+id/edtUpdatePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateCarPlateNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />
    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdatePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.9"
        />

    <Button
        android:id="@+id/btnUpdateCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
      app:layout_constraintTop_toBottomOf="@id/btnUpdateProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.9"
        />

</androidx.constraintlayout.widget.ConstraintLayout>